--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "fnd"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+walkdir = "2.3.2"
+regex = "1.6.0"
+
+[dev-dependecies]
+assert_cmd = "2"
+predicates = "2"
+rand = "0.8"
