(automated gcp push)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-walkdir = "2.3.2"
+colored = "2"
 regex = "1.6.0"
+walkdir = "2.3.2"
+
 
 [dev-dependecies]
 assert_cmd = "2"
