--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 
 [dependencies]
 colored = "2"
+ignore = "0.4.18"
 regex = "1.6.0"
-walkdir = "2.3.2"
-
 
 [dev-dependecies]
 assert_cmd = "2"
