--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fnd"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 colored = "2"
 coq = { path = "../coq" }
+exit-code = "1.0.0"
 ignore = "0.4.18"
 regex = "1.6.0"
