--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
 name = "fnd"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 colored = "2"
 coq = { path = "../coq" }
-exit-code = "1.0.0"
+exitcode = "1.1.2"
 ignore = "0.4.18"
 regex = "1.6.0"
