--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "fnd"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 
 [dependencies]
 colored = "2"
-coq = { path = "../coq" }
+cor = { path = "../cor" }
 exitcode = "1.1.2"
 ignore = "0.4.18"
 regex = "1.6.0"
